Fix: use openclaw.extensions and openclaw command

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "type": "module",
   "main": "index.ts",
-  "clawdbot": {
+  "openclaw": {
     "extensions": [
       "./index.ts"
     ],
